--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -8,7 +8,6 @@ jobs:
     runs-on: unbuntu-latest
 
     steps: 
-
       - name: checkout out repository code
         uses: actions/checkout@v4
-      - run: echo "$(cat hello_world.txt"
+      - run: echo "$(cat hello_world.txt")
