--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -5,7 +5,7 @@ on: push
 jobs: 
   hello-world-job:
 
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
 
     steps: 
       - name: checkout out repository code
